welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:3: error: not found: value n
  n = nums.lenght
  ^averageValue:4: error: not found: value n
  for (k<-0 to n-1){
               ^averageValue:7: error: not found: value n
  return som/n
             ^